# datarelay-packages

./: README.md
python/: install.sh  pyproject.toml
python/datarelay/: __init__.py  crypto.py  sql_server.py
