[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datarelay"
version = "0.1.0"
description = "Python utilities for DataRelay — decrypt params, process queue jobs"
requires-python = ">=3.10"
dependencies = ["cryptography>=41"]

[tool.setuptools.packages.find]
where = ["."]
include = ["datarelay*"]
